# bbs-fw

./: .gitignore  .prettierrc  README.md
code/firmware/: CMakeLists.txt
src/firmware/: Makefile  adc.c  adc.h  app.c  app.h  battery.c  battery.h  bbs-fw.vcxproj  cfgstore.c  cfgstore.h  constants.c  constants.h  eeprom.c  eventlog.h  extcom.c  extcom.h  fwconfig.h  interrupt.h  main.c  motor.c  motor.h  pins.h  sensors.c  sensors.h  stc15.h  system.c  system.h  throttle.c  timers.c  timers.h  uart.c  uart_motor.h  util.h  version.h  watchdog.c  watchdog.h
src/programmer/: default_config.yaml  main.py  pyproject.toml  validation.py  write_header.py
src/tool/Model/: EventLogEntry.cs
